index.html updated

--- a/index.html
+++ b/index.html
@@ -9,13 +9,90 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>Bootstrap</title>
 
   </head>
 
-  <body>
+  <body style="margin-bottom: 200px; padding: 16px;">
 
-    <h1>Hello, world!</h1>
+    <!-- Cabeçalho -->
+    <h1>Cabeçalho 1</h1>
+    <h2>Cabeçalho 2</h2>
+    <h3>Cabeçalho 3</h3>
+    <h4>Cabeçalho 4</h4>
+    <h5>Cabeçalho 5</h5>
+    <h6>Cabeçalho 6</h6>
+
+    <br><br>
+
+    <!-- Display classes - Maior destaque -->
+    <h1 class="display-1">Display 1</h1>
+    <h1 class="display-2">Display 2</h1>
+    <h1 class="display-3">Display 3</h1>
+    <h1 class="display-4">Display 4</h1>
+
+    <br><br>
+
+    <!-- Parágrafo -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet veniam eius eaque totam sequi! Eligendi,     minima unde facere nihil veniam, fugiat nisi saepe doloribus iure ex inventore atque alias ducimus.lore
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores mollitia corrupti hic sint veniam tenetur quod commodi ad? Optio suscipit veritatis id temporibus. Officiis asperiores, incidunt quis molestiae blanditiis eos?</p>
+    
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet veniam eius eaque totam sequi! Eligendi,     minima unde facere nihil veniam, fugiat nisi saepe doloribus iure ex inventore atque alias ducimus.lore
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores mollitia corrupti hic sint veniam tenetur quod commodi ad? Optio suscipit veritatis id temporibus. Officiis asperiores, incidunt quis molestiae blanditiis eos?</p>
+    
+         <!-- Parágrafo Monospace -->
+    <p class="text-monospace">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet veniam eius eaque totam sequi! Eligendi,     minima unde facere nihil veniam, fugiat nisi saepe doloribus iure ex inventore atque alias ducimus.lore
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores mollitia corrupti hic sint veniam tenetur quod commodi ad? Optio suscipit veritatis id temporibus. Officiis asperiores, incidunt quis molestiae blanditiis eos?</p>
+
+    <br><br>
+
+    <!-- Classes de estilo -->
+    <p class="font-weight-bold">Texto Negrito</p>
+    <p class="font-weight-normal">Texto Normal</p>
+    <p class="font-italic">Texto itálico</p>
+    <p class="font-weight-light">Texto light</p>
+
+    <br><br>
+
+    <!-- Transformação de textos -->
+    <p class="text-uppercase">Letras Maísculas</p>
+    <p class="text-lowercase">Letras Minúsculas</p>
+    <p class="text-capitalize">Primeira Maíscula</p>
+
+    <br><br>
+
+    <!-- Alinhamentos -->
+    <p class="text-right">Direita</p>
+    <p class="text-left">Esquerda</p>
+    <p class="text-center">Centralizado</p>
+
+    <br><br>
+
+    <!-- Bloco de citação -->
+    <blockquote class="blockquote text-center">
+      <p>Esse é um bloco de citação!</p>
+    </blockquote>
+
+    <br><br>
+
+    <!-- Bloco de citação com rodapé -->
+    <blockquote class="blockquote text-center">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit error, a cumque, ratione necessitatibus consequuntur suscipit mollitia sit aut reiciendis molestiae corporis ipsam totam deserunt accusantium porro voluptate nemo odio.</p>
+      <footer class="blockquote-footer">por
+          <cite>Diogo Ataide Silva</cite>
+      </footer>
+    </blockquote>
+
+    <br><br>
+
+    <!-- Truncate -->
+    <p class="text-truncate">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sint distinctio rerum asperiores vero vitae et est accusamus aliquam, iusto consequatur recusandae harum architecto magnam inventore, dolorem minima. Iste, eum!
+    Culpa id officia sequi ipsum? Reiciendis eum expedita incidunt amet officiis necessitatibus harum repellat, eius alias voluptatem laudantium praesentium esse tenetur ratione aliquam ea dicta accusamus repudiandae, molestias facilis excepturi!
+    Amet cum recusandae ea consequatur, maxime soluta molestias! Accusantium repellat cumque alias libero? Assumenda doloribus sunt veritatis, magni unde, temporibus alias fugiat enim repellendus optio non amet consequatur. Impedit, non.</p>
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
