index.html updated

--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
     Culpa id officia sequi ipsum? Reiciendis eum expedita incidunt amet officiis necessitatibus harum repellat, eius alias voluptatem laudantium praesentium esse tenetur ratione aliquam ea dicta accusamus repudiandae, molestias facilis excepturi!
     Amet cum recusandae ea consequatur, maxime soluta molestias! Accusantium repellat cumque alias libero? Assumenda doloribus sunt veritatis, magni unde, temporibus alias fugiat enim repellendus optio non amet consequatur. Impedit, non.</p>
 
+    <br><br>
+
+    <!-- Listas sem estilo -->
+    <ul class="list-unstyled">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+
+    <!-- Listas inline -->
+    <ul class="list-inline">
+      <li class="list-inline-item">Item 1</li>
+      <li class="list-inline-item">Item 2</li>
+      <li class="list-inline-item">Item 3</li>
+    </ul>
+
 
 
 
