alinhamento.html created and updated

--- a/alinhamento-textos.html
+++ b/alinhamento-textos.html
@@ -24,13 +24,14 @@
 
     <!-- 
         Alinhamento responsivo - text-<tela>-<alinhamento>
-            tela: sm, md, lg, xl
-            alinhamento: left, center, right
+        class text-<tela>-<alinhamento>
+        tela: sm, md, lg, xl
+        alinhamento: left, center, right
      -->
-    <p>tela &gt;= 576px</p><!--Small-->
-    <p>tela &gt;=  768px</p><!--Medium-->
-    <p>tela &gt;= 992px</p><!--Large-->
-    <p>tela &gt;= 1200px</p><!--Extra Large-->
+    <p class="text-sm-right">tela &gt;= 576px</p><!--Small-->
+    <p class="text-md-right">tela &gt;= 768px</p><!--Medium-->
+    <p class="text-lg-right">tela &gt;= 992px</p><!--Large-->
+    <p class="text-xl-right">tela &gt;= 1200px</p><!--Extra Large-->
 
     <br>
     <br>
