alinhamento.html updated

--- a/alinhamento-textos.html
+++ b/alinhamento-textos.html
@@ -37,23 +37,25 @@
     <br>
 
     <!-- Elemento Block para inline -->
-    <h1>Lorem ipsum dolor</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <h1 class="bg-success d-inline">Lorem ipsum dolor</h1>
+    <p class="bg-success d-inline">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
     <br>
     <br>
 
     <!-- Elemento Inline para Block -->
-    <span>Lorem ipsum dolor</span>
-    <span>Lorem ipsum dolor 2</span>
+    <span class="bg-success d-block">Lorem ipsum dolor 1</span> <br>
+    <span class="bg-success d-block">Lorem ipsum dolor 2</span>
 
     <br>
     <br>
 
-    <!-- Elemento Inline para Block -->
-    <h3>Lorem ipsum</h3>
-    <h3>Lorem ipsum dolor</h3>
-
+    <!-- Elemento Inline inline-Block -->
+    <div class="bg-warning">
+        <h3 class="bg-success d-inline-block">Lorem ipsum</h3>
+        <h3 class="bg-success d-inline-block">Lorem ipsum dolor</h3>
+    </div>
+    
 
 
     
