--- a/alinhamento-textos.html
+++ b/alinhamento-textos.html
@@ -53,7 +53,7 @@
     <!-- Elemento Inline inline-Block -->
     <div class="bg-warning">
         <h3 class="bg-success d-inline-block">Lorem ipsum</h3>
-        <h3 class="bg-success d-inline-block">Lorem ipsum dolor</h3>
+        <h3 class="bg-success d-inline-block" style="margin-top: 50px; width: 400px;">Lorem ipsum dolor</h3>
     </div>
     
 
