elementos-flutuantes.html updated

--- a/elementos-flutuantes.html
+++ b/elementos-flutuantes.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-    <title>Alinhamento de textos</title>
+    <title>Bootstrap - Elementos flutuantes</title>
 
   </head>
 
