cores-background.html updated

--- a/cores-background.html
+++ b/cores-background.html
@@ -9,70 +9,53 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-    <title>Bootstrap - Elementos flutuantes</title>
+    <title>Bootstrap - Cores & Background</title>
 
   </head>
 
   <body style="margin-bottom: 200px; padding: 16px;">
 
-    <!-- Elementos flutuantes -->
-    <div style="border: 1px solid red;" class="clearfix">
-        <div class="float-left bg-success">Float Left</div>
-        <div class="float-right bg-warning">Float Right</div> 
-    </div>
-    
-    <br><br>
-
-    <!-- Posicionamento fixo - top e bottom -->
-    <h1 class="bg-success fixed-bottom">Título do conteúdo fixo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.</p>
-
-    <!-- 
-        Float responsivo - float-<tela>-<direcao>
-            tela: sm, md, lg, xl
-            alinhamento: left, right
-    -->
-    <div class="float-sm-right">tela &gt;= 576px * </div><!--Small-->
-    <div class="float-md-right">tela &gt;=  768px * </div><!--Medium-->
-    <div class="float-lg-right">tela &gt;= 992px * </div><!--Large-->
-    <div class="float-xl-right">tela &gt;= 1200px * </div><!--Extra Large-->
-
-    <br><br>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.</p>
-
-    <!-- Colar no topo (sticky) -->
-    <ul class="list-inline bg-warning sticky-top">
-      <li class="list-inline-item">Item 1</li>
-      <li class="list-inline-item">Item 2</li>
-      <li class="list-inline-item">Item 3</li>
-    </ul>
-
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit maxime alias corrupti pariatur inventore veritatis quos iste labore architecto dolorum, atque voluptates eos explicabo voluptas, id cumque assumenda. Aliquid, delectus.
-    Totam culpa nemo provident repellendus laboriosam illum tempore assumenda facilis perspiciatis, deserunt quos quidem porro repudiandae quas! Saepe repellendus dolore voluptas cum, quam, a consequuntur quos suscipit ab corporis natus?
-    Laborum, rem saepe quibusdam ipsum assumenda, aliquam cumque delectus blanditiis ratione tenetur error esse accusamus illo atque, autem repudiandae consequuntur asperiores doloribus dolorum ipsam neque. Atque, inventore accusantium. Asperiores, quam.
-    Earum eum consectetur iusto incidunt rerum iste doloribus, corporis omnis voluptatibus, aperiam provident nobis, officiis itaque ut quas rem maiores adipisci mollitia quia? Nemo animi, velit autem ipsa blanditiis non.
-    Eligendi ex ipsum tempore error id a possimus provident explicabo maiores, autem deleniti dicta tenetur aliquam! Quae optio excepturi et est. Architecto magnam reiciendis vero pariatur dolores quibusdam at ipsum.
-    Quidem, earum maiores corporis porro autem placeat alias in ipsam similique modi aperiam nostrum labore dignissimos consequatur sequi! Nulla impedit eaque qui fugit rerum ut praesentium hic in, inventore quidem?
-    Reiciendis dicta, veniam explicabo quae fugit, dolores modi aliquam quas neque reprehenderit quos libero? Eos impedit quasi, perferendis consequuntur, facilis sunt quam enim officia delectus consequatur ad, quis architecto omnis.
-    Excepturi illo quia dignissimos sint. Facere tenetur velit illo veniam cum neque eius dicta dolorem corrupti? Quisquam voluptatum alias beatae veniam optio, adipisci voluptatibus, rem ullam nesciunt eius inventore sed.
-    Minus necessitatibus optio assumenda atque dignissimos voluptates repellat obcaecati eaque quos modi! Dolor reiciendis saepe aliquid, molestias consectetur ipsum praesentium eos non fugit odit error sit, fugiat aut ducimus autem.
-    Distinctio libero magnam aspernatur ad minima architecto rerum amet nostrum. Eaque natus harum quos veniam commodi quia ex ratione voluptas eligendi. Facere labore natus, aut quia ratione ex in alias?
-    Vero quidem omnis aut officia unde ullam, velit, nesciunt illum aliquid debitis a? Sint pariatur delectus nisi vero saepe hic fugiat laborum voluptate ratione facilis officiis, molestiae veritatis suscipit id.
-    Nostrum, at deserunt molestias quaerat iure harum impedit dolore inventore delectus! Deserunt pariatur quidem rem optio possimus facilis aperiam dolor magni error obcaecati praesentium vel illo, id nemo facere alias?
-    Nulla deserunt esse accusamus nihil modi magnam harum quisquam. Molestias voluptas autem molestiae voluptatibus saepe totam ea aliquam porro assumenda fugit, nulla distinctio neque consequuntur vero a deleniti officia beatae!
-    Sit, animi. Consequuntur temporibus corporis cum ipsum quos vero possimus natus. Aperiam harum magnam, officia voluptas praesentium consequuntur hic excepturi doloremque. Vitae, doloribus eaque iusto aperiam exercitationem asperiores architecto ipsa.
-    Architecto voluptates, necessitatibus commodi temporibus laboriosam voluptatum incidunt. Eos necessitatibus enim facilis a ratione blanditiis maiores delectus non facere sequi, placeat culpa illum laborum? Sint quas fugit laborum adipisci esse.
-    Quod maxime, amet architecto consequatur delectus, quam natus itaque inventore est id repellat suscipit aperiam sunt culpa! Nobis ab recusandae, corporis quibusdam, veniam accusamus placeat iusto sit, maxime illo in.
-    Ratione, quas quibusdam veritatis ad quo quaerat, est doloremque possimus officia rerum autem quos a aspernatur ea et perferendis nobis nihil eos vitae? Alias autem veritatis at quidem delectus quibusdam.
-    Laudantium totam alias at magni cum distinctio placeat odit quibusdam accusantium aperiam omnis cumque quod ullam libero, tempore, expedita temporibus ipsum earum incidunt fugiat unde harum! Atque harum fuga modi?
-    Beatae nemo aliquid, iste iure at dolorem. Perferendis enim temporibus reprehenderit ad voluptatibus autem, odit obcaecati blanditiis sapiente repellendus soluta, corrupti quibusdam laudantium sint numquam suscipit laborum animi, maxime fugit!
-    Adipisci in iste alias, numquam, fugiat ipsam hic laborum quasi consequuntur amet repudiandae laboriosam, ex voluptate asperiores nihil? Dicta repudiandae error vitae omnis soluta repellendus nobis ullam fugiat eum labore!</p>
-
-    <h1>Título do conteúdo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.</p>
+     <!-- Classes para formatação de textos -->
+     <h1 class="">Texto primary</h1>
+     <h1 class="">Texto secondary</h1>
+     <h1 class="">Texto success</h1>
+     <h1 class="">Texto info</h1>
+     <h1 class="">Texto warning</h1>
+     <h1 class="">Texto danger</h1>
+     <h1 class="">Texto light</h1>
+     <h1 class="">Texto dark</h1>
+     <h1 class="">Texto white</h1>
+     <h1 class="">Texto black 50</h1>
+     <h1 class="">Texto white</h1>
+ 
+     <br>
+     <br>
+ 
+     <!-- Formatação de links -->
+     <a href="#" class="">Link primary</a><br>
+     <a href="#" class="">Link secondary</a><br>
+     <a href="#" class="">Link success</a><br>
+     <a href="#" class="">Link info</a><br>
+     <a href="#" class="">Link warning</a><br>
+     <a href="#" class="">Link danger</a><br>
+     <a href="#" class="">Link light</a><br>
+     <a href="#" class="">Link dark</a><br>
+     <a href="#" class="">Link white</a><br>
+ 
+     <br>
+     <br>
+ 
+     <!-- Backgrounds -->
+     <div class="">Background primary</div>
+     <div class="">Background secondary</div>
+     <div class="">Background success</div>
+     <div class="">Background info</div>
+     <div class="">Background warning</div>
+     <div class="">Background danger</div>
+     <div class="">Background light</div>
+     <div class="">Background dark</div>
+     <div class="">Background white</div>
+     <div class="t">Background transparent</div>
     
 
 
