--- a/cores-background.html
+++ b/cores-background.html
@@ -16,17 +16,17 @@
   <body style="margin-bottom: 200px; padding: 16px;">
 
      <!-- Classes para formatação de textos -->
-     <h1 class="">Texto primary</h1>
-     <h1 class="">Texto secondary</h1>
-     <h1 class="">Texto success</h1>
-     <h1 class="">Texto info</h1>
-     <h1 class="">Texto warning</h1>
-     <h1 class="">Texto danger</h1>
-     <h1 class="">Texto light</h1>
-     <h1 class="">Texto dark</h1>
-     <h1 class="">Texto white</h1>
-     <h1 class="">Texto black 50</h1>
-     <h1 class="">Texto white</h1>
+     <h1 class="text-primary">Texto primary</h1>
+     <h1 class="text-secondary">Texto secondary</h1>
+     <h1 class="text-success">Texto success</h1>
+     <h1 class="text-info">Texto info</h1>
+     <h1 class="text-warning">Texto warning</h1>
+     <h1 class="text-danger">Texto danger</h1>
+     <h1 class="text-light">Texto light</h1>
+     <h1 class="text-dark">Texto dark</h1>
+     <h1 class="text-white">Texto white</h1>
+     <h1 class="text-black-50">Texto black 50</h1>
+     <h1 class="text-white-50">Texto white 50</h1>
  
      <br>
      <br>
