--- a/cores-background.html
+++ b/cores-background.html
@@ -32,30 +32,30 @@
      <br>
  
      <!-- Formatação de links -->
-     <a href="#" class="">Link primary</a><br>
-     <a href="#" class="">Link secondary</a><br>
-     <a href="#" class="">Link success</a><br>
-     <a href="#" class="">Link info</a><br>
-     <a href="#" class="">Link warning</a><br>
-     <a href="#" class="">Link danger</a><br>
-     <a href="#" class="">Link light</a><br>
-     <a href="#" class="">Link dark</a><br>
-     <a href="#" class="">Link white</a><br>
+     <a href="#" class="text-primary">Link primary</a><br>
+     <a href="#" class="text-secondary">Link secondary</a><br>
+     <a href="#" class="text-success">Link success</a><br>
+     <a href="#" class="text-info">Link info</a><br>
+     <a href="#" class="text-warning">Link warning</a><br>
+     <a href="#" class="text-danger">Link danger</a><br>
+     <a href="#" class="text-light">Link light</a><br>
+     <a href="#" class="text-dark">Link dark</a><br>
+     <a href="#" class="text-white">Link white</a><br>
  
      <br>
      <br>
  
      <!-- Backgrounds -->
-     <div class="">Background primary</div>
-     <div class="">Background secondary</div>
-     <div class="">Background success</div>
-     <div class="">Background info</div>
-     <div class="">Background warning</div>
-     <div class="">Background danger</div>
-     <div class="">Background light</div>
-     <div class="">Background dark</div>
-     <div class="">Background white</div>
-     <div class="t">Background transparent</div>
+     <div class="bg-primary">Background primary</div>
+     <div class="bg-secondary">Background secondary</div>
+     <div class="bg-success">Background success</div>
+     <div class="bg-info">Background info</div>
+     <div class="bg-warning">Background warning</div>
+     <div class="bg-danger">Background danger</div>
+     <div class="bg-light">Background light</div>
+     <div class="bg-dark">Background dark</div>
+     <div class="bg-white">Background white</div>
+     <div class="bg-transparent">Background transparent</div>
     
 
 
