--- a/margin-padding.html
+++ b/margin-padding.html
@@ -26,7 +26,7 @@
     Valor a definir (0 até 5)
     -->
     <h1 class="bg-success">Margin</h1>
-    <p class="bg-success">Conteúdo principal</p>
+    <p class="bg-success m-5">Conteúdo principal</p>
     <h1 class="bg-success">Margin</h1>
 
     <br>
@@ -43,7 +43,7 @@
     Valor a definir (0 até 5)
     -->
     <h1 class="bg-success">Padding</h1>
-    <p class="bg-success">Conteúdo principal</p>
+    <p class="bg-success p-5">Conteúdo principal</p>
     <h1 class="bg-success">Padding</h1>
 
     <br>
