tamanhos-bordas.html updated

--- a/tamanhos-bordas.html
+++ b/tamanhos-bordas.html
@@ -47,7 +47,7 @@
     border-<cor>: primary, secondary, success, 
         info, warning, danger, light, dark, white
     -->
-    <div class="bg-white mb-2 border border-warning">todas as bordas</div>
+    <div class="bg-white mb-2 border border-wa">todas as bordas</div>
     <div class="bg-white mb-2 border-top">borda superior</div>
     <div class="bg-white mb-2 border-bottom">borda inferior</div>
     <div class="bg-white mb-2 border-right">borda direita</div>
