media-queries and his dependecies updated

--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Types</title>
 
-    <link rel="stylesheet" text="text/css" href="style.css">
-    <link rel="stylesheet" text="text/css" href="estilo-impressao.css">
+    <link rel="stylesheet" text="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" text="text/css" media="print" href="estilo-impressao.css">
 
 </head>
 
@@ -16,7 +16,7 @@
 
 
     <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam incidunt quasi consequuntur amet doloribus, eos omnis vitae aliquam soluta veritatis illo voluptatem quos. Iure quo nulla magnam sed porro eveniet?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
     </p>
 
     
