apoio-breakpoints.html updated

--- a/apoio-breakpoints.html
+++ b/apoio-breakpoints.html
@@ -14,10 +14,16 @@
     <style type="text/css">
         
         /*Small devices (landscape phones)*/
-        @media () {}
+        @media (min-width: 576px) {
+          body {
+            background: red;
+          }
+        }
 
         /*Medium devices (tablets, 768px e superior)*/
-        @media () {}
+        @media (min-width: 768px) {
+          
+        }
 
         /*Large devices (desktops, 992px e superior)*/
         @media () {}
