--- a/apoio-breakpoints.html
+++ b/apoio-breakpoints.html
@@ -15,54 +15,88 @@
         
         /*Small devices (landscape phones)*/
         @media (min-width: 576px) {
-          body {
+          /*body {
             background: red;
-          }
+          }*/
         }
 
         /*Medium devices (tablets, 768px e superior)*/
         @media (min-width: 768px) {
-          
+          /*body {
+            background: blue;
+          }*/
         }
 
         /*Large devices (desktops, 992px e superior)*/
-        @media () {}
+        @media (min-width: 992px) {
+          /*body {
+            background: yellow;
+          }*/
+        }
 
         /*Extra large devices (large desktops, 1200px e superior)*/
-        @media () {}
+        @media (min-width: 1200px) {
+          /*body {
+            background: gray;
+          }*/
+        }
 
 
 
         /**************************/
         /* Extra small devices (portraint phones) */
-        @media () {}
+        @media (max-width: 575px) {
+          /*body {
+            background: #870000;
+          }*/
+        }
 
         /* Small devices (Landscape Phones) */
-        @media () {}
+        @media (max-width: 767px) {}
 
         /* Medium devices (Tablets) */
-        @media () {}
+        @media (max-width: 991px) {}
 
         /* Large devices (Desktops) */
-        @media () {}
+        @media (max-width: 1199px) {} 
 
 
 
         /******************************************/
-        /*Extra small devices (portrait phones, menor que 576px)*/
-        @media () {}
+        /* Extra small devices (portrait phones, less than 576px) */
+        @media (max-width: 575.98px) {
+          body {
+            background: #870000;
+          }
+        }
 
-        /*Small devices (landscape phones, 576px e maiores)*/
-        @media () and () {}
+        /* Small devices (landscape phones, 576px and up) */
+        @media (min-width: 576px) and (max-width: 767.98px) {
+          body {
+            background: red;
+          }
+        }
 
-        /*Medium devices (tablets, 768px e maiores)*/
-        @media () and () {}
+        /* Medium devices (tablets, 768px and up) */
+        @media (min-width: 768px) and (max-width: 991.98px) {
+          body {
+            background: blue;
+          }
+        }
 
-        /*Large devices (desktops, 992px e maiores)*/
-        @media () and () {}
+        /* Large devices (desktops, 992px and up) */
+        @media (min-width: 992px) and (max-width: 1199.98px) {
+          body {
+            background: yellow;
+          }
+        }
 
-        /*Extra large devices (large desktops, 1200px  e maiores)*/
-        @media () {}
+        /* Extra large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {
+          body {
+            background: gray;
+          }
+        }
 
     </style>
 
