apoio-barra-navegacao.html updated

--- a/apoio-barra-navegacao.html
+++ b/apoio-barra-navegacao.html
@@ -41,8 +41,23 @@
     </ul>
 
     <h2>Barra de navegação simples</h2>
-    <nav>
-      <a href="">Chalé hotel</a>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Navegação-->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Serviços</a>
+        </li>
+      </ul>
+
     </nav>
 
     <h2>Barra de navegação com menu responsivo</h2>
