apoio-barra-navegacao.html updated

--- a/apoio-barra-navegacao.html
+++ b/apoio-barra-navegacao.html
@@ -61,6 +61,31 @@
 
     <h2>Barra de navegação com menu responsivo</h2>
 
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Menu Hamburguer-->
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-target">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--Navegação-->
+      <div class="collapse navbar-collapse" id="nav-target">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-li    nk" href="">Serviços</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <h2>Barra de navegação com formulário</h2>
 
     <h2>Barra de navegação com menu dropdown</h2>
