apoio-barra-navegacao.html updated

--- a/apoio-barra-navegacao.html
+++ b/apoio-barra-navegacao.html
@@ -66,12 +66,16 @@
       <a href="" class="navbar-brand">Chalé hotel</a>
 
       <!--Menu Hamburguer-->
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-target">
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navegacao"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <!--Navegação-->
-      <div class="collapse navbar-collapse" id="nav-target">
+      <div class="collapse navbar-collapse" id="navegacao">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="">Home</a>
@@ -80,13 +84,48 @@
             <a class="nav-link" href="">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-li    nk" href="">Serviços</a>
+            <a class="nav-link" href="">Serviços</a>
           </li>
         </ul>
       </div>
     </nav>
 
     <h2>Barra de navegação com formulário</h2>
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Menu Hamburguer-->
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navegacao2"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--Navegação-->
+      <div class="collapse navbar-collapse" id="navegacao2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Serviços</a>
+          </li>
+        </ul>
+
+        <!--Formulário-->
+        <form class="form-inline" action="">
+          <input type="text" class="form-control" placeholder="Pesquisar..." />
+          <button class="btn btn-outline-success ml-1">Ok</button>
+        </form>
+      </div>
+    </nav>
 
     <h2>Barra de navegação com menu dropdown</h2>
 
