--- a/apoio-barra-navegacao.html
+++ b/apoio-barra-navegacao.html
@@ -129,16 +129,342 @@
 
     <h2>Barra de navegação com menu dropdown</h2>
 
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Menu Hamburguer-->
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navegacao2"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--Navegação-->
+      <div class="collapse navbar-collapse" id="navegacao2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Sobre</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href=""
+              >Serviços</a
+            >
+
+            <div class="dropdown-menu">
+              <a href="" class="dropdown-item">Serviço 1</a>
+              <a href="" class="dropdown-item">Serviço 2</a>
+              <a href="" class="dropdown-item">Serviço 3</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <!--Cores
     opções: bg-primary, bg-secondary, bg-success, bg-info,
     bg-warning, bg-danger, bg-light, bg-dark
     -->
     <h2>Cores</h2>
 
+    <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Navegação-->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Serviços</a>
+        </li>
+      </ul>
+    </nav>
+
     <!--Alinhamentos
     opções: fixed-top, fixed-bottom, sticky
     -->
     <h2>Alinhamentos</h2>
+
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-success">
+      <!--Logo-->
+      <a href="" class="navbar-brand">Chalé hotel</a>
+
+      <!--Navegação-->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Serviços</a>
+        </li>
+      </ul>
+    </nav>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
+
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et libero
+      id erat tristique fermentum placerat a erat. Vestibulum ante ipsum primis
+      in faucibus orci luctus et ultrices posuere cubilia Curae; Sed ac lobortis
+      quam. Nunc vestibulum tincidunt arcu, at scelerisque velit ornare et.
+      Vestibulum ut malesuada nibh.
+    </p>
 
     <h1>Lorem ipsum dolor sit amet</h1>
     <p>
