--- a/breakpoints.html
+++ b/breakpoints.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
+
+    <title>Bootstrap - breakpoints</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,54 +11,92 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Bootstrap - Breakpoints</title>
-
     <style type="text/css">
         
         /*Small devices (landscape phones)*/
-        @media () {}
+        @media (min-width: 576px) {
+          /*body {
+            background: red;
+          }*/
+        }
 
         /*Medium devices (tablets, 768px e superior)*/
-        @media () {}
+        @media (min-width: 768px) {
+          /*body {
+            background: blue;
+          }*/
+        }
 
         /*Large devices (desktops, 992px e superior)*/
-        @media () {}
+        @media (min-width: 992px) {
+          /*body {
+            background: yellow;
+          }*/
+        }
 
         /*Extra large devices (large desktops, 1200px e superior)*/
-        @media () {}
+        @media (min-width: 1200px) {
+          /*body {
+            background: gray;
+          }*/
+        }
 
 
 
         /**************************/
         /* Extra small devices (portraint phones) */
-        @media () {}
+        @media (max-width: 575px) {
+          /*body {
+            background: #870000;
+          }*/
+        }
 
         /* Small devices (Landscape Phones) */
-        @media () {}
+        @media (max-width: 767px) {}
 
         /* Medium devices (Tablets) */
-        @media () {}
+        @media (max-width: 991px) {}
 
         /* Large devices (Desktops) */
-        @media () {}
+        @media (max-width: 1199px) {} 
 
 
 
         /******************************************/
-        /*Extra small devices (portrait phones, menor que 576px)*/
-        @media () {}
+        /* Extra small devices (portrait phones, less than 576px) */
+        @media (max-width: 575.98px) {
+          body {
+            background: #870000;
+          }
+        }
 
-        /*Small devices (landscape phones, 576px e maiores)*/
-        @media () and () {}
+        /* Small devices (landscape phones, 576px and up) */
+        @media (min-width: 576px) and (max-width: 767.98px) {
+          body {
+            background: red;
+          }
+        }
 
-        /*Medium devices (tablets, 768px e maiores)*/
-        @media () and () {}
+        /* Medium devices (tablets, 768px and up) */
+        @media (min-width: 768px) and (max-width: 991.98px) {
+          body {
+            background: blue;
+          }
+        }
 
-        /*Large devices (desktops, 992px e maiores)*/
-        @media () and () {}
+        /* Large devices (desktops, 992px and up) */
+        @media (min-width: 992px) and (max-width: 1199.98px) {
+          body {
+            background: yellow;
+          }
+        }
 
-        /*Extra large devices (large desktops, 1200px  e maiores)*/
-        @media () {}
+        /* Extra large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {
+          body {
+            background: gray;
+          }
+        }
 
     </style>
 
@@ -63,8 +104,6 @@
 
   <body style="margin-bottom: 200px; width: 600px; margin: 0 auto;">
 
-
-    
 
 
     <!-- Optional JavaScript -->
