--- a/apoio-cartoes-parte1.html
+++ b/apoio-cartoes-parte1.html
@@ -91,8 +91,8 @@
 
     <h3 class="border-bottom">Cartão com cabeçalho</h3>
 
-    <div class="card text-white">
-      <div>Cabeçalho do cartão</div>
+    <div class="card">
+      <div class="card-header text-right">Cabeçalho do cartão</div>
       <div class="card-body">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
@@ -121,7 +121,7 @@
 
     <div class="card-footer">
       <div>Cabeçalho do cartão</div>
-      <div class="card-body"> 
+      <div class="card-body">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
         <p class="card-text">
@@ -146,21 +146,21 @@
     <br /><br />
 
     <h3 class="border-bottom">Cartão com navegação</h3>
-    <div>
-      <div>
-        <ul>
-          <li>
-            <a href="">Link 1</a>
+    <div class="card">
+      <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+          <li class="nav-item">
+            <a class="nav-link" href="">Link 1</a>
           </li>
-          <li>
-            <a href="">Link 2</a>
+          <li class="nav-item">
+            <a class="nav-link" href="">Link 2</a>
           </li>
-          <li>
-            <a href="">Link 3</a>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="">Link 3</a>
           </li>
         </ul>
       </div>
-      <div>
+      <div class="card-body">
         <h4>Título do cartão</h4>
         <h6>Subtítulo do cartão</h6>
         <p>
@@ -168,7 +168,7 @@
           dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est
           pulvinar, aliquet purus ut, dictum elit.
         </p>
-        <a href="">Leia mais</a>
+        <a class="btn btn-outline-danger btn-block" href="">Leia mais</a>
       </div>
     </div>
 
