--- a/apoio-grid.html
+++ b/apoio-grid.html
@@ -29,8 +29,12 @@
   <body>
     <div class="container marcador-container">
       <div class="row">
-        <div class="marcador col-6 col-sm-2 col-md-10 col-lg-2 col-xl-10">Área 1</div>
-        <div class="marcador col-6 col-sm-10 col-md-2 col-lg-10 col-xl-2">Área 2</div>
+        <div class="marcador col-6 col-sm-2 col-md-10 col-lg-2 col-xl-10">
+          Área 1
+        </div>
+        <div class="marcador col-6 col-sm-10 col-md-2 col-lg-10 col-xl-2">
+          Área 2
+        </div>
       </div>
     </div>
 
