--- a/apoio-grid.html
+++ b/apoio-grid.html
@@ -29,10 +29,10 @@
   <body>
     <div class="container marcador-container">
       <div class="row">
-        <div class="marcador col-6 col-sm-2 col-md-10 col-lg-2 col-xl-10">
+        <div class="marcador col-sm-6">
           Área 1
         </div>
-        <div class="marcador col-6 col-sm-10 col-md-2 col-lg-10 col-xl-2">
+        <div class="marcador col-sm-6">
           Área 2
         </div>
       </div>
