--- a/apoio-grid.html
+++ b/apoio-grid.html
@@ -30,10 +30,30 @@
     <div class="container marcador-container">
       <div class="row">
         <div class="marcador col-sm-6">
-          Área 1
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel unde et
+            neque quam nihil magnam a illo ducimus odio? Possimus magnam ullam
+            minima vitae quo distinctio alias fugiat natus a? Commodi
+            necessitatibus libero est sit vero veniam deserunt laudantium
+            sapiente beatae, iure impedit sint, reprehenderit neque aut debitis
+            voluptatem fugit nisi ad numquam perspiciatis temporibus id ipsa.
+            Harum, placeat aliquam!
+          </p>
+          <button class="btn btn-warning">Leia mais</button>
         </div>
         <div class="marcador col-sm-6">
-          Área 2
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel unde et
+            neque quam nihil magnam a illo ducimus odio? Possimus magnam ullam
+            minima vitae quo distinctio alias fugiat natus a? Commodi
+            necessitatibus libero est sit vero veniam deserunt laudantium
+            sapiente beatae, iure impedit sint, reprehenderit neque aut debitis
+            voluptatem fugit nisi ad numquam perspiciatis temporibus id ipsa.
+            Harum, placeat aliquam!
+          </p>
+          <button class="btn btn-warning">Leia mais</button>
         </div>
       </div>
     </div>
