--- a/apoio-grid.html
+++ b/apoio-grid.html
@@ -29,7 +29,7 @@
   <body>
     <div class="container marcador-container">
       <div class="row">
-        <div class="marcador col-sm-6">
+        <div class="marcador col-sm-6 col-xl-4">
           <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel unde et
@@ -42,7 +42,7 @@
           </p>
           <button class="btn btn-warning">Leia mais</button>
         </div>
-        <div class="marcador col-sm-6">
+        <div class="marcador col-sm-6 col-xl-4">
           <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel unde et
@@ -54,6 +54,19 @@
             Harum, placeat aliquam!
           </p>
           <button class="btn btn-warning">Leia mais</button>
+        </div>
+        <div class="marcador col-sm-4">
+          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel unde et
+            neque quam nihil magnam a illo ducimus odio? Possimus magnam ullam
+            minima vitae quo distinctio alias fugiat natus a? Commodi 
+            necessitatibus libero est sit vero veniam deserunt laudantium
+            sapiente beatae, iure impedit sint, reprehenderit neque aut debitis
+            voluptatem fugit nisi ad numquam perspiciatis temporibus id ipsa.
+            Harum, placeat aliquam!
+          </p>
+          <button class="btn btn-warning col-xl-4">Leia mais</button>
         </div>
       </div>
     </div>
