--- a/apoio-alinhamento-grid.html
+++ b/apoio-alinhamento-grid.html
@@ -1,15 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
-
     <title>Bootstrap - Alinhamento do grid</title>
 
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
     <style type="text/css">
       .marcador {
@@ -21,60 +23,118 @@
         background: #5bf946;
         border: 1px solid #36ae26;
       }
-      .borda{
+      .borda {
         border: 1px solid blue;
       }
-      
     </style>
-
   </head>
 
   <body>
-
-    <div class="container">
-
-      <h2>Alinhamento vertical (align-items-ALINHAMENTO: start, center, end)</h2>
-      <div class="row">
-        <div class="col">Área 1</div>
-        <div class="col">Área 2</div>
-        <div class="col">Área 3</div>
+    <div class="container" style="padding: 30px">
+      <h2>
+        Alinhamento vertical (align-items-ALINHAMENTO: start, center, end)
+      </h2>
+      <div class="marcador row align-items-start">
+        <div class="col borda">Área 1</div>
+        <div class="col borda">Área 2</div>
+        <div class="col borda">Área 3</div>
       </div>
 
-      <h2>Alinhamento horizontal individual (align-self-ALINHAMENTO: start, center, end)</h2>
-      <div class="row">
-        <div class="col">Área 1</div>
-        <div class="col">Área 2</div>
-        <div class="col">Área 3</div>
+      <div class="marcador row align-items-center">
+        <div class="col borda">Área 1</div>
+        <div class="col borda">Área 2</div>
+        <div class="col borda">Área 3</div>
       </div>
 
-      <h2>Alinhamento horizontal colunas (justify-content-ALINHAMENTO: start, center, end)</h2>
-      <div class="row">
+      <div class="marcador row align-items-end">
+        <div class="col borda">Área 1</div>
+        <div class="col borda">Área 2</div>
+        <div class="col borda">Área 3</div>
+      </div>
+
+      <h2>
+        Alinhamento vertical individual (align-self-ALINHAMENTO: start, center,
+        end)
+      </h2>
+      <div class="marcador row">
+        <div class="col borda align-self-start">Área 1</div>
+        <div class="col borda align-self-center">Área 2</div>
+        <div class="col borda align-self-end">Área 3</div>
+      </div>
+
+      <div class="marcador row">
+        <div class="col borda align-self-start">Área 1</div>
+        <div class="col borda align-self-center">Área 2</div>
+        <div class="col borda align-self-end">Área 3</div>
+      </div>
+
+      <div class="marcador row">
+        <div class="col borda align-self-start">Área 1</div>
+        <div class="col borda align-self-center">Área 2</div>
+        <div class="col borda align-self-end">Área 3</div>
+      </div>
+
+      <h2>
+        Alinhamento horizontal colunas (justify-content-ALINHAMENTO: start,
+        center, end)
+      </h2>
+      <div class="row borda justify-content-start">
+        <div class="marcador col-2">Área 1</div>
+        <div class="marcador col-2">Área 2</div>
+        <div class="marcador col-2">Área 3</div>
+      </div>
+
+      <div class="row borda justify-content-center">
+        <div class="marcador col-2">Área 1</div>
+        <div class="marcador col-2">Área 2</div>
+        <div class="marcador col-2">Área 3</div>
+      </div>
+
+      <div class="row borda justify-content-end">
         <div class="marcador col-2">Área 1</div>
         <div class="marcador col-2">Área 2</div>
         <div class="marcador col-2">Área 3</div>
       </div>
 
       <h2>Distribuição (justify-content-ALINHAMENTO: around, between, end)</h2>
-      <div class="row">
+      <div class="row borda justify-content-around">
+        <div class="marcador col-2">Área 1</div>
+        <div class="marcador col-2">Área 2</div>
+        <div class="marcador col-2">Área 3</div>
+      </div>
+
+      <div class="row borda justify-content-between">
+        <div class="marcador col-2">Área 1</div>
+        <div class="marcador col-2">Área 2</div>
+        <div class="marcador col-2">Área 3</div>
+      </div>
+
+      <div class="row borda justify-content-end">
         <div class="marcador col-2">Área 1</div>
         <div class="marcador col-2">Área 2</div>
         <div class="marcador col-2">Área 3</div>
       </div>
 
       <h2>Removendo espaçamento</h2>
-      <div class="row">
+      <div class="row no-gutters">
         <div class="borda col-2">Área 1</div>
         <div class="borda col-2">Área 2</div>
         <div class="borda col-2">Área 3</div>
       </div>
-
-
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
