--- a/apoio-classes-flexbox.html
+++ b/apoio-classes-flexbox.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <div class="container">
+    <div class="container" style="padding: 20px;">
 
       <h2>Flex container e flex itens (d-flex, flex-row, flex-column, flex-row-reverse)</h2>
       <div class="caixa">
