--- a/apoio-classes-flexbox.html
+++ b/apoio-classes-flexbox.html
@@ -30,7 +30,28 @@
     <div class="container" style="padding: 20px;">
 
       <h2>Flex container e flex itens (d-flex, flex-row, flex-column, flex-row-reverse)</h2>
-      <div class="caixa">
+      <div class="caixa d-flex">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex flex-row">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex flex-column">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex flex-row-reverse">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
@@ -38,7 +59,28 @@
       <br><br>
 
       <h2>Alinhamento horizontal: justify-content-ALINHAMENTO (start, center, end, around e between)</h2>
-      <div class="caixa">
+      <div class="caixa d-flex justify-content-start">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex justify-content-center">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex justify-content-around">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex justify-content-between">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
@@ -46,7 +88,14 @@
       <br><br>
 
       <h2>Colunas (d-flex, flex-column, flex-column-reverse)</h2>
-      <div class="caixa">
+      <div class="caixa d-flex flex-column">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex flex-column-reverse">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
@@ -54,6 +103,13 @@
       <br><br>
 
       <h2>Alinhamento vertical: align-items-ALINHAMENTO (start, center, end, baseline e stretch)</h2>
+      <div class="caixa">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
       <div class="caixa">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
