--- a/apoio-classes-flexbox.html
+++ b/apoio-classes-flexbox.html
@@ -103,14 +103,35 @@
       <br><br>
 
       <h2>Alinhamento vertical: align-items-ALINHAMENTO (start, center, end, baseline e stretch)</h2>
-      <div class="caixa">
+      <div class="caixa d-flex align-items-start">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+      
+      <div class="caixa d-flex align-items-center">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
       </div>
       <br><br>
 
-      <div class="caixa">
+      <div class="caixa d-flex align-items-end">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-items-baseline">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-items-stretch">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
@@ -118,7 +139,43 @@
       <br><br>
 
       <h2>Alinhamento self: align-self-ALINHAMENTO (start, center, end, baseline e stretch)</h2>
-      <div class="caixa">
+      <div class="caixa d-flex">
+        <div class="item align-self-start">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+        <div class="item">Flex item 4</div>
+        <div class="item">Flex item 5</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-self-center">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+        <div class="item">Flex item 4</div>
+        <div class="item">Flex item 5</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-self-end">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+        <div class="item">Flex item 4</div>
+        <div class="item">Flex item 5</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-self-baseline">
+        <div class="item">Flex item 1</div>
+        <div class="item">Flex item 2</div>
+        <div class="item">Flex item 3</div>
+        <div class="item">Flex item 4</div>
+        <div class="item">Flex item 5</div>
+      </div>
+      <br><br>
+
+      <div class="caixa d-flex align-self-stretch">
         <div class="item">Flex item 1</div>
         <div class="item">Flex item 2</div>
         <div class="item">Flex item 3</div>
