--- a/apoio-classes-flexbox.html
+++ b/apoio-classes-flexbox.html
@@ -141,46 +141,10 @@
       <h2>Alinhamento self: align-self-ALINHAMENTO (start, center, end, baseline e stretch)</h2>
       <div class="caixa d-flex">
         <div class="item align-self-start">Flex item 1</div>
-        <div class="item">Flex item 2</div>
-        <div class="item">Flex item 3</div>
-        <div class="item">Flex item 4</div>
-        <div class="item">Flex item 5</div>
-      </div>
-      <br><br>
-
-      <div class="caixa d-flex align-self-center">
-        <div class="item">Flex item 1</div>
-        <div class="item">Flex item 2</div>
-        <div class="item">Flex item 3</div>
-        <div class="item">Flex item 4</div>
-        <div class="item">Flex item 5</div>
-      </div>
-      <br><br>
-
-      <div class="caixa d-flex align-self-end">
-        <div class="item">Flex item 1</div>
-        <div class="item">Flex item 2</div>
-        <div class="item">Flex item 3</div>
-        <div class="item">Flex item 4</div>
-        <div class="item">Flex item 5</div>
-      </div>
-      <br><br>
-
-      <div class="caixa d-flex align-self-baseline">
-        <div class="item">Flex item 1</div>
-        <div class="item">Flex item 2</div>
-        <div class="item">Flex item 3</div>
-        <div class="item">Flex item 4</div>
-        <div class="item">Flex item 5</div>
-      </div>
-      <br><br>
-
-      <div class="caixa d-flex align-self-stretch">
-        <div class="item">Flex item 1</div>
-        <div class="item">Flex item 2</div>
-        <div class="item">Flex item 3</div>
-        <div class="item">Flex item 4</div>
-        <div class="item">Flex item 5</div>
+        <div class="item align-self-center">Flex item 2</div>
+        <div class="item align-self-end">Flex item 3</div>
+        <div class="item align-self-baseline">Flex item 4</div>
+        <div class="item align-self-stretch">Flex item 5</div>
       </div>
       <br><br>
 
